rm text optin from nav on mobile fixed reservations page link

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -161,12 +161,6 @@ nav {
         }
       }
     }
-    .text-optin {
-      display: none;
-      @include bp-small {
-        display: inline-block;
-      }
-    }
   }
   .nav-logo {
     max-width: 70%;
